Adds circle benchmark to sdf-enum sdf-traits seems to be consistently around 2.5x faster than sdf-enums

--- a/libs/sdf-traits/Cargo.toml
+++ b/libs/sdf-traits/Cargo.toml
@@ -13,5 +13,5 @@ sdf-vecs = { path = "../sdf-vecs" }
 criterion = "0.3"
 
 [[bench]]
-name = "circle_benchmark"
+name = "circle_trait_benchmark"
 harness = false
