--- a/libs/sdf-traits/Cargo.toml
+++ b/libs/sdf-traits/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 sdf-vecs = { path = "../sdf-vecs" }
 dyn-clone = "1.0"
+glam = "0.12.0"
 
 [dev-dependencies]
 criterion = "0.3"
